# Lensing-SIREN

./: .gitignore  LICENSE  README.md  diff_operations.py  fits_to_h5.py  gridsearch.py  maml_train_siren.py  meta_train_siren.py  modules.py  rasterize_halo_kappa_maps.py  requirements.txt  setup.cfg  siren.py  train_maml_siren.py
data/: kappa_000000_xy.fits
notebooks/: example_load_model.ipynb
shell/: gridsearch_maml_siren.sh  train_maml_siren.sh
src/lensiren/jax/: utils.py
src/lensiren/jax/nn/: siren.py  swish.py
src/lensiren/torch/: __init__.py  dataset.py  diff_operations.py  loss.py  maml.py  meta_modules.py  modules.py  siren.py  utils.py
