[metadata]
name = lensiren
version = 0.0.1
author = Alexandre Adam, Adam Coogan
author_email = todo@todo.com
description = SIRENs for strong lensing analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AlexandreAdam/Lensing-SIREN
project_urls =
    Bug Tracker = https://github.com/AlexandreAdam/Lensing-SIREN/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    astropy
    h5py
    jax
    jaxlib
    jupyter
    matplotlib
    numpy
    sklearn
    tensorflow
    torch
    tqdm

[options.packages.find]
where = src
